tests/test_data/custom-ingress-secret/expected/networking.k8s.io/v1beta1/Ingress/chartmuseum.yaml
# Source: jxboot-helmfile-resources/templates/700-chartmuseum-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: chartmuseum
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: jenkins-x-chartmuseum
          servicePort: 8080
    host: chartmuseum-jx.mydomain.com
  tls:
  - hosts:
    - chartmuseum-jx.mydomain.com
    secretName: "my-ingress-secret"
