tests/test_data/custom-ingress-secret/expected/networking.k8s.io/v1beta1/Ingress/hook.yaml
# Source: jxboot-helmfile-resources/templates/700-hook-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: hook
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: hook
          servicePort: 80
        path: "/hook"
    host: hook-jx.mydomain.com
  tls:
  - hosts:
    - hook-jx.mydomain.com
    secretName: "my-ingress-secret"
