tests/test_data/custom-ingress-secret/expected/networking.k8s.io/v1beta1/Ingress/nexus.yaml
# Source: jxboot-helmfile-resources/templates/700-nexus-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nexus
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: nexus
          servicePort: 80
    host: nexus-jx.mydomain.com
  tls:
  - hosts:
    - nexus-jx.mydomain.com
    secretName: "my-ingress-secret"
